--- a/4.Computer vision binary classification.ipynb
+++ b/4.Computer vision binary classification.ipynb
@@ -44,7 +44,8 @@
         "id": "rX8mhOLljYeM"
       },
       "source": [
-        "# Classification horses vs humans"
+        "# Classification horses vs humans\n",
+        "Here we have the training and vaidation data."
       ]
     },
     {
@@ -63,7 +64,7 @@
         "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/horse-or-human.zip \\\n",
         "    -O /tmp/horse-or-human.zip"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,18 +90,18 @@
       "metadata": {
         "id": "bbGKNPek9uj7",
         "colab_type": "code",
+        "outputId": "7d70fbc3-e57a-4773-99e7-2e8090fcdbee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
-        },
-        "outputId": "7d70fbc3-e57a-4773-99e7-2e8090fcdbee"
+        }
       },
       "source": [
         "!wget --no-check-certificate \\\n",
         "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/validation-horse-or-human.zip \\\n",
         "    -O /tmp/validation-horse-or-human.zip"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,16 +123,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "9brUxyTpYZHy"
-      },
-      "source": [
-        "The following python code will use the OS library to use Operating System libraries, giving you access to the file system, and the zipfile library allowing you to unzip the data. "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -142,9 +133,11 @@
         "import os #acces to directory\n",
         "import zipfile #unzip data\n",
         "\n",
+        "#training\n",
         "local_zip = '/tmp/horse-or-human.zip'\n",
         "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
         "zip_ref.extractall('/tmp/horse-or-human')\n",
+        "#validation\n",
         "local_zip = '/tmp/validation-horse-or-human.zip'\n",
         "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
         "zip_ref.extractall('/tmp/validation-horse-or-human')\n",
@@ -162,11 +155,7 @@
       "source": [
         "The contents of the .zip are extracted to the base directory `/tmp/horse-or-human`, which in turn each contain `horses` and `humans` subdirectories.\n",
         "\n",
-        "In short: The training set is the data that is used to tell the neural network model that 'this is what a horse looks like', 'this is what a human looks like' etc. \n",
-        "\n",
-        "One thing to pay attention to in this sample: We do not explicitly label the images as horses or humans. If you remember with the handwriting example earlier, we had labelled 'this is a 1', 'this is a 7' etc.  Later you'll see something called an ImageGenerator being used -- and this is coded to read images from subdirectories, and automatically label them from the name of that subdirectory. So, for example, you will have a 'training' directory containing a 'horses' directory and a 'humans' one. ImageGenerator will label the images appropriately for you, reducing a coding step. \n",
-        "\n",
-        "Let's define each of these directories:"
+        "One thing to pay attention to in this sample: We do not explicitly label the images as horses or humans. If you remember with the handwriting example earlier, we had labelled 'this is a 1', 'this is a 7' etc.  Later you'll see something called an ImageGenerator being used -- and this is coded to read images from subdirectories, and automatically label them from the name of that subdirectory. So, for example, you will have a 'training' directory containing a 'horses' directory and a 'humans' one. ImageGenerator will label the images appropriately for you, reducing a coding step. "
       ]
     },
     {
@@ -226,7 +215,7 @@
         "validation_human_names = os.listdir(validation_human_dir)\n",
         "print(validation_human_names[:10])"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +236,7 @@
         "id": "HlqN5KbafhLI"
       },
       "source": [
-        "Let's find out the total number of horse and human images in the directories:"
+        "Here we have the total number of horse and human images in the directories"
       ]
     },
     {
@@ -267,7 +256,7 @@
         "print('total validation horse images:', len(os.listdir(validation_horse_dir)))\n",
         "print('total validation human images:', len(os.listdir(validation_human_dir)))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +345,7 @@
         "\n",
         "plt.show()\n"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,11 +369,7 @@
         "id": "5oqBkNBJmtUv"
       },
       "source": [
-        "## Building a Small Model from Scratch\n",
-        "\n",
-        "But before we continue, let's start defining the model:\n",
-        "\n",
-        "Step 1 will be to import tensorflow."
+        "## Building a Small Model from Scratch"
       ]
     },
     {
@@ -404,21 +389,9 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "BnhYCP4tdqjC"
-      },
-      "source": [
-        "We then add convolutional layers as in the previous example, and flatten the final result to feed into the densely connected layers."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "gokG5HKpdtzm"
       },
       "source": [
-        "Finally we add the densely connected layers. \n",
-        "\n",
         "Note that because we are facing a two-class classification problem, i.e. a *binary classification problem*, we will end our network with a [*sigmoid* activation](https://wikipedia.org/wiki/Sigmoid_function), so that the output of our network will be a single scalar between 0 and 1, encoding the probability that the current image is class 1 (as opposed to class 0)."
       ]
     },
@@ -482,7 +455,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,16 +489,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "DmtkTn06pKxF"
-      },
-      "source": [
-        "The \"output shape\" column shows how the size of your feature map evolves in each successive layer. The convolution layers reduce the size of the feature maps by a bit due to padding, and each pooling layer halves the dimensions."
       ]
     },
     {
@@ -607,7 +570,7 @@
         "        # Since we use binary_crossentropy loss, we need binary labels\n",
         "        class_mode='binary')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,10 +590,6 @@
       },
       "source": [
         "### Training\n",
-        "Let's train for 15 epochs -- this may take a few minutes to run.\n",
-        "\n",
-        "Do note the values per epoch.\n",
-        "\n",
         "The Loss and Accuracy are a great indication of progress of training. It's making a guess as to the classification of the training data, and then measuring it against the known label, calculating the result. Accuracy is the portion of correct guesses. "
       ]
     },
@@ -654,7 +613,7 @@
         "      validation_data = validation_generator,\n",
         "      validation_steps=8)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +714,7 @@
         "    print(fn + \" is a horse\")\n",
         " "
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1015,8 +974,9 @@
       "source": [
         "As you can see we go from the raw pixels of the images to increasingly abstract and compact representations. The representations downstream start highlighting what the network pays attention to, and they show fewer and fewer features being \"activated\"; most are set to zero. This is called \"sparsity.\" Representation sparsity is a key feature of deep learning.\n",
         "\n",
+        "These representations carry increasingly less information about the original pixels of the image, but increasingly refined information about the class of the image. You can think of a convnet (or a deep network in general) as an information distillation pipeline.\n",
         "\n",
-        "These representations carry increasingly less information about the original pixels of the image, but increasingly refined information about the class of the image. You can think of a convnet (or a deep network in general) as an information distillation pipeline."
+        "We ran all with (300,300) size images and (150,150) size images, we could see that although model is faster, it's also a little less accurate because images are smaller and features can be confused."
       ]
     },
     {
