--- a/14.Series dense layers.ipynb
+++ b/14.Series dense layers.ipynb
@@ -111,8 +111,8 @@
         "def seasonal_pattern(season_time):\n",
         "    \"\"\"Just an arbitrary pattern, you can change it if you wish\"\"\"\n",
         "    return np.where(season_time < 0.4,\n",
-        "                    np.cos(season_time * 2 * np.pi),\n",
-        "                    1 / np.exp(3 * season_time))\n",
+        "                    np.cos(season_time * 2 * np.pi), #altura\n",
+        "                    1 / np.exp(3 * season_time)) #curvatura\n",
         "\n",
         "def seasonality(time, period, amplitude=1, phase=0):\n",
         "    \"\"\"Repeats the same pattern at each period\"\"\"\n",
@@ -125,10 +125,8 @@
         "\n",
         "time = np.arange(4 * 365 + 1, dtype=\"float32\")\n",
         "baseline = 10\n",
-        "series = trend(time, 0.1)  \n",
-        "baseline = 10\n",
         "amplitude = 20\n",
-        "slope = 0.09\n",
+        "slope = 0.09 #inclinacion\n",
         "noise_level = 5\n",
         "\n",
         "# Create the series\n",
@@ -310,6 +308,17 @@
           },
           "execution_count": 8
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RNBkpG0VvXrH",
+        "colab_type": "text"
+      },
+      "source": [
+        "*   lr: distancia de los pasos\n",
+        "*   momentum: helps to accelerate convergence"
       ]
     },
     {
