--- a/16.Sunspot mix layers.ipynb
+++ b/16.Sunspot mix layers.ipynb
@@ -45,13 +45,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f3a63589-53ab-4d3a-df90-ee08e7a0a56b"
+        "outputId": "908c51d7-c5f5-474a-cf0c-8bd8130304e8"
       },
       "source": [
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +78,7 @@
         "    plt.ylabel(\"Value\")\n",
         "    plt.grid(True)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,28 +90,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 219
         },
-        "outputId": "8784c1fc-c91b-4458-b6b6-6c78e9fa569a"
+        "outputId": "53b9c3f8-29b0-4d42-f0b5-9b93c83bdd65"
       },
       "source": [
         "!wget --no-check-certificate \\\n",
         "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/Sunspots.csv \\\n",
         "    -O /tmp/sunspots.csv"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2020-08-09 00:48:11--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/Sunspots.csv\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.107.128, 74.125.20.128, 74.125.197.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.107.128|:443... connected.\n",
+            "--2020-08-11 02:58:42--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/Sunspots.csv\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.142.128, 74.125.195.128, 74.125.20.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.142.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 70827 (69K) [application/octet-stream]\n",
             "Saving to: ‘/tmp/sunspots.csv’\n",
             "\n",
             "\r/tmp/sunspots.csv     0%[                    ]       0  --.-KB/s               \r/tmp/sunspots.csv   100%[===================>]  69.17K  --.-KB/s    in 0.001s  \n",
             "\n",
-            "2020-08-09 00:48:11 (89.3 MB/s) - ‘/tmp/sunspots.csv’ saved [70827/70827]\n",
+            "2020-08-11 02:58:42 (103 MB/s) - ‘/tmp/sunspots.csv’ saved [70827/70827]\n",
             "\n"
           ],
           "name": "stdout"
@@ -127,7 +127,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 388
         },
-        "outputId": "b5a3f78d-675d-4b72-f201-53cf61c6b197"
+        "outputId": "ac8da364-2202-433e-fde2-2b5cbe7be2e0"
       },
       "source": [
         "import csv\n",
@@ -146,7 +146,7 @@
         "plt.figure(figsize=(10, 6))\n",
         "plot_series(time, series)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +264,7 @@
         "  tf.keras.layers.Dense(30, activation=\"relu\"),\n",
         "  tf.keras.layers.Dense(10, activation=\"relu\"),\n",
         "  tf.keras.layers.Dense(1),\n",
-        "  tf.keras.layers.Lambda(lambda x: x * 400)\n",
+        "  tf.keras.layers.Lambda(lambda x: x * 400) #values are between 0 and 400\n",
         "])\n",
         "\n",
         "lr_schedule = tf.keras.callbacks.LearningRateScheduler(\n",
